CRUD Scaffolding - Aula 247

--- a/SalesMVC/appsettings.json
+++ b/SalesMVC/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesMVCContext-3785e38b-93ba-4b94-9b14-264f0ca221e0;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
