--- a/SalesMVC/appsettings.json
+++ b/SalesMVC/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesMVCContext-3785e38b-93ba-4b94-9b14-264f0ca221e0;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesMVCContext": "server=localhost;userid=developer;password=12345678;database=salesmvcdb"
   }
 }
